fixed spacing issue with Mintrello title and text

--- a/src/styles/designs/splash_page.scss
+++ b/src/styles/designs/splash_page.scss
@@ -31,6 +31,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    
 
 
     .butler-gif {
@@ -43,6 +44,7 @@
 
     .splash-page-main-words{
       margin-top: 5%;
+      margin-right: 100px;
       
     
       h1 {
